deploy/k8s/04-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: storelense
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server", "--save", "20", "1"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { memory: 64Mi, cpu: 100m }
            limits:   { memory: 512Mi, cpu: 500m }
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata: { name: data }
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests: { storage: 2Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: storelense
spec:
  clusterIP: None
  selector: { app: redis }
  ports:
    - port: 6379
