deploy/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storelense-ingress
  namespace: storelense
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.storelense.internal
        - api.storelense.internal
      secretName: storelense-tls
  rules:
    - host: app.storelense.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: { number: 3000 }
    - host: api.storelense.internal
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port: { number: 8080 }
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port: { number: 8080 }
